--- a/package.json
+++ b/package.json
@@ -9,22 +9,20 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@element-plus/nuxt": "^1.0.6",
     "@nuxt/devtools": "latest",
     "nuxt": "^3.7.1",
     "sass": "^1.66.1"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.1.0",
     "algoliasearch": "^4.19.1",
     "axios": "^1.5.0",
     "contentful": "^10.5.1",
     "date-fns": "^2.30.0",
-    "element-plus": "^2.3.14",
     "isomorphic-dompurify": "^1.8.0",
     "marked": "^8.0.1",
     "nuxt-icons": "^3.2.1",
     "ramda": "^0.29.0",
+    "sparc-design-system-components": "^0.0.0",
     "striptags": "^3.2.0",
     "vue-clipboard2": "^0.3.3",
     "vuex": "^4.1.0"
