--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "sass": "^1.66.1"
   },
   "dependencies": {
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
+    "@pinia/nuxt": "^0.5.1",
     "algoliasearch": "^4.19.1",
     "axios": "^1.5.0",
     "contentful": "^10.5.1",
@@ -24,7 +26,6 @@
     "ramda": "^0.29.0",
     "sparc-design-system-components": "^0.0.1",
     "striptags": "^3.2.0",
-    "vue-clipboard2": "^0.3.3",
-    "vuex": "^4.1.0"
+    "vue-clipboard2": "^0.3.3"
   }
 }
