--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "sass": "^1.66.1"
   },
   "dependencies": {
+    "@element-plus/nuxt": "^1.0.6",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "@pinia/nuxt": "^0.5.1",
     "algoliasearch": "^4.19.1",
