--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sass": "^1.66.1"
   },
   "dependencies": {
+    "@element-plus/nuxt": "^1.0.6",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "@pinia/nuxt": "^0.5.1",
     "algoliasearch": "^4.19.1",
@@ -24,7 +25,7 @@
     "isomorphic-dompurify": "^1.9.0",
     "marked": "^8.0.1",
     "ramda": "^0.29.0",
-    "sparc-design-system-nuxt3-module": "^0.1.0-alpha.5",
+    "sparc-design-system-components-2": "0.0.14",
     "striptags": "^3.2.0",
     "vue-clipboard2": "^0.3.3"
   }
