--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "contentful": "^10.5.1",
     "date-fns": "^2.30.0",
     "isomorphic-dompurify": "^1.9.0",
+    "lodash": "^4.17.21",
     "marked": "^8.0.1",
     "ramda": "^0.29.0",
-    "sparc-design-system-components-2": "0.0.14",
+    "sparc-design-system-components-2": "0.0.17",
     "striptags": "^3.2.0",
     "vue-clipboard2": "^0.3.3"
   }
