--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "marked": "^8.0.1",
     "ramda": "^0.29.0",
     "sparc-design-system-components-2": "0.0.20",
-    "striptags": "^3.2.0",
-    "vue-clipboard2": "^0.3.3"
+    "striptags": "^3.2.0"
   }
 }
