--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "js-file-download": "^0.4.12",
     "lodash": "^4.17.21",
     "marked": "^8.0.1",
+    "plyr": "^3.7.8",
     "ramda": "^0.29.0",
     "sparc-design-system-components-2": "0.0.22",
     "striptags": "^3.2.0",
