--- a/package.json
+++ b/package.json
@@ -36,5 +36,6 @@
     "uint8array-extras": "^1.0.0",
     "vue-chartjs": "^5.3.0",
     "vue-social-sharing": "^4.0.0-alpha4"
-  }
+  },
+  "type": "module"
 }
