--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "lodash": "^4.17.21",
     "marked": "^8.0.1",
     "plyr": "^3.7.8",
+    "postscribe": "^2.0.8",
     "ramda": "^0.29.0",
-    "sparc-design-system-components-2": "0.0.22",
+    "sparc-design-system-components-2": "0.0.23",
     "striptags": "^3.2.0",
     "uint8array-extras": "^1.0.0",
     "vue-chartjs": "^5.3.0",
