--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "@pinia/nuxt": "^0.5.1",
     "algoliasearch": "^4.19.1",
-    "aws-amplify": "^6.0.9",
+    "aws-amplify": "5.3.15",
     "axios": "^1.5.0",
     "chart.js": "^4.4.1",
     "chartjs-plugin-datalabels": "^2.2.0",
