--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "vue-social-sharing": "^4.0.0-alpha4"
   },
   "engines": {
-    "node": "18.17.1"
+    "node": "18.17.1",
+    "yarn": "1.22.19"
   },
   "type": "module"
 }
