--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "@pinia/nuxt": "^0.5.1",
     "algoliasearch": "^4.19.1",
+    "aws-amplify": "5.0.5",
     "axios": "^1.5.0",
     "chart.js": "^4.4.1",
     "chartjs-plugin-datalabels": "^2.2.0",
@@ -38,6 +39,9 @@
     "uint8array-extras": "^1.0.0",
     "vue-chartjs": "^5.3.0",
     "vue-social-sharing": "^4.0.0-alpha4"
+  },
+  "resolutions": {
+    "string-width": "4.2.3"
   },
   "engines": {
     "node": "18.17.1"
