--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@zadigetvoltaire/nuxt-gtm": "^0.0.13",
-    "nuxt": "^3.7.1",
+    "nuxt": "3.7.1",
     "nuxt-svgo": "^3.5.6",
     "sass": "^1.66.1"
   },
