Add mapintegratedvuer to package.json.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sass": "^1.66.1"
   },
   "dependencies": {
+    "@abi-software/mapintegratedvuer": "0.7.0-vue3.1",
     "@element-plus/nuxt": "^1.0.6",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "@pinia/nuxt": "^0.5.1",
