--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@zadigetvoltaire/nuxt-gtm": "^0.0.13",
+    "cypress": "^13.6.6",
     "nuxt": "^3.8.2",
     "nuxt-svgo": "^3.5.6",
     "sass": "^1.66.1"
