--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxtjs/turnstile": "^0.6.3",
     "@zadigetvoltaire/nuxt-gtm": "^0.0.13",
     "nuxt": "^3.8.2",
     "nuxt-svgo": "^3.5.6",
