added sitemap generator script

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "start": "node .output/server/index.mjs",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "sitemap": "node generate_sitemap.js"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
@@ -15,7 +16,8 @@
     "@zadigetvoltaire/nuxt-gtm": "^0.0.13",
     "nuxt": "^3.8.2",
     "nuxt-svgo": "^3.5.6",
-    "sass": "^1.66.1"
+    "sass": "^1.66.1",
+    "sitemap": "^7.1.1"
   },
   "dependencies": {
     "@abi-software/mapintegratedvuer": "^0.7.0-vue3.9",
