--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "sitemap": "^7.1.1"
   },
   "dependencies": {
-    "@abi-software/mapintegratedvuer": "^0.7.0-vue3.9",
+    "@abi-software/mapintegratedvuer": "1.0.0",
     "@abi-software/plotvuer": "0.4.0-vue-3-alpha.10",
     "@abi-software/simulationvuer": "0.7.0-vue-3-alpha.5",
     "@element-plus/nuxt": "^1.0.6",
