--- a/.github/workflows/cypress_timeline.yml
+++ b/.github/workflows/cypress_timeline.yml
@@ -3,8 +3,8 @@
 name: Cypress Timeline Tests
 
 on:
-  push:
-    branches: [master, main]
+  # push:
+  #   branches: [master, main]
 
   pull_request_target:
     types: [opened, synchronize, reopened]
