add two more inputs for manual testing

--- a/.github/workflows/cypress_timeline.yml
+++ b/.github/workflows/cypress_timeline.yml
@@ -51,7 +51,11 @@ on:
       DATASET_IDS:
         description: "Define dataset ids"
         required: true
-        default: "127, 282, 290, 34, 76"
+        default: "127, 205, 290, 34, 76"
+      TAXON_MODELS:
+        description: "Define taxon models"
+        required: true
+        default: "Rat, Human Female"
       THREE_SYNC_VIEW:
         type: "choice"
         description: "Define species for sync map"
@@ -60,6 +64,10 @@ on:
           - "Human Female"
           - "Human Male"
           - "Rat"
+      SEARCH_IN_MAP:
+        description: "Define keyword"
+        required: true
+        default: "Heart"
       SCAFFOLD_DATASET_IDS:
         description: "Define scaffold dataset ids"
         required: true
@@ -72,7 +80,9 @@ env:
   FILTER_FACET: ${{ github.event.inputs.FILTER_FACET }}
   MULTIPLE_FILTER_FACETS: ${{ github.event.inputs.MULTIPLE_FILTER_FACETS }}
   DATASET_IDS: ${{ github.event.inputs.DATASET_IDS }}
+  TAXON_MODELS: ${{ github.event.inputs.TAXON_MODELS }}
   THREE_SYNC_VIEW: ${{ github.event.inputs.THREE_SYNC_VIEW }}
+  SEARCH_IN_MAP: ${{ github.event.inputs.SEARCH_IN_MAP }}
   SCAFFOLD_DATASET_IDS: ${{ github.event.inputs.SCAFFOLD_DATASET_IDS }}
   CYPRESS_PROJECT_ID: ${{ secrets.CYPRESS_PROJECT_ID }}
   CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
