--- a/.github/workflows/cypress_timeline.yml
+++ b/.github/workflows/cypress_timeline.yml
@@ -112,8 +112,6 @@ env:
   SHOW_TIMESERIES_VIEWER: ${{ secrets.SHOW_TIMESERIES_VIEWER }}
   SPARC_PORTAL_USER_ID: ${{ secrets.SPARC_PORTAL_USER_ID }}
   SPARC_PORTAL_USER_SECRET: ${{ secrets.SPARC_PORTAL_USER_SECRET }}
-  # Should be removed when nuxt3 portal is on production
-  PROMOTION_TIMESTAMP: 1718107200 # Wed Jun 12 2024 00:00:00 GMT+1200 (New Zealand Standard Time)
 
 jobs:
   pull-request-cypress-run:
@@ -174,13 +172,7 @@ jobs:
         with:
           node-version: 18.17.1
 
-      # Can be removed when nuxt3 portal is on production
-      - name: Setup datetime
-        run: echo "CURRENT_TIMESTAMP=$(date +'%s')" >> $GITHUB_ENV
-
       - name: Schedule Run Testing on ${{ matrix.target }}
-        # Should be removed when nuxt3 portal is on production
-        if: ${{ (matrix.target == 'https://sparc.science' && fromJSON(env.CURRENT_TIMESTAMP) > fromJSON(env.PROMOTION_TIMESTAMP)) || matrix.target == 'https://staging.sparc.science' }}
         uses: cypress-io/github-action@v6
         env:
           ROOT_URL: ${{ matrix.target }}
@@ -202,10 +194,6 @@ jobs:
         with:
           node-version: 18.17.1
 
-      # Can be removed when nuxt3 portal is on production
-      - name: Setup datetime
-        run: echo "CURRENT_TIMESTAMP=$(date +'%s')" >> $GITHUB_ENV
-
       - name: Manual Run Testing against Staging
         if: ${{ github.event.inputs.PORTAL_TARGET == 'Staging' }}
         env:
@@ -217,8 +205,7 @@ jobs:
           spec: tests/cypress/e2e/databrowser.cy.js,tests/cypress/e2e/datasets.cy.js,tests/cypress/e2e/mapsviewer.cy.js
 
       - name: Manual Run Testing against Production
-        # Should be edit when nuxt3 portal is on production
-        if: ${{ github.event.inputs.PORTAL_TARGET == 'Production' && fromJSON(env.CURRENT_TIMESTAMP) > fromJSON(env.PROMOTION_TIMESTAMP) }}
+        if: ${{ github.event.inputs.PORTAL_TARGET == 'Production' }}
         env:
           ROOT_URL: "https://sparc.science"
         uses: cypress-io/github-action@v6
