--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
     "striptags": "^3.2.0",
     "uint8array-extras": "^1.0.0",
     "vue-chartjs": "^5.3.0",
-    "vue-social-sharing": "^4.0.0-alpha4",
-    "gridstack": "^9.5.0"
+    "vue-social-sharing": "^4.0.0-alpha4"
   },
   "resolutions": {
     "string-width": "4.2.3",
