--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "contentful": "^10.5.1",
     "date-fns": "^2.30.0",
+    "gridstack": "^10.1.2",
     "isomorphic-dompurify": "^1.9.0",
     "js-file-download": "^0.4.12",
     "lodash": "^4.17.21",
     "marked": "^8.0.1",
+    "mitt": "^3.0.1",
     "plyr": "^3.7.8",
     "postscribe": "^2.0.8",
     "ramda": "^0.29.0",
