--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "plyr": "^3.7.8",
     "postscribe": "^2.0.8",
     "ramda": "^0.29.0",
+    "sparc-dashboard-beta": "^0.2.0",
     "sparc-design-system-components-2": "0.0.26",
     "striptags": "^3.2.0",
     "uint8array-extras": "^1.0.0",
