remove two containers from manual testing

--- a/.github/workflows/cypress_timeline.yml
+++ b/.github/workflows/cypress_timeline.yml
@@ -220,7 +220,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        containers: [1, 2, 3, 4]
+        containers: [1, 2]
 
     steps:
       - name: Checkout
