--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@nuxt/devtools": "latest",
     "@nuxtjs/turnstile": "^0.6.3",
     "@zadigetvoltaire/nuxt-gtm": "^0.0.13",
-    "cypress": "^13.6.6",
+    "cypress": "13.9.0",
     "nuxt": "^3.8.2",
     "nuxt-svgo": "^3.5.6",
     "sass": "^1.66.1",
