--- a/.github/workflows/scheduled_staging_cypress.yml
+++ b/.github/workflows/scheduled_staging_cypress.yml
@@ -1,4 +1,4 @@
-name: Scheduled Cypress Testing
+name: Scheduled Staging Cypress Testing
 
 on:
   schedule:
@@ -51,7 +51,6 @@ env:
 
 jobs:
   scheduled-cypress-run-staging:
-    if: github.event_name == 'schedule'
     runs-on: ubuntu-latest
 
     strategy:
@@ -72,33 +71,6 @@ jobs:
         uses: cypress-io/github-action@v6
         env:
           ROOT_URL: "https://staging.sparc.science"
-        with:
-          wait-on: ${{ env.ROOT_URL }}
-          record: true
-          parallel: true
-
-  scheduled-cypress-run-production:
-    if: github.event_name == 'schedule'
-    runs-on: ubuntu-latest
-
-    strategy:
-      fail-fast: false
-      matrix:
-        containers: [1, 2, 3, 4]
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18.17.1
-
-      - name: Schedule Run Testing against Production
-        uses: cypress-io/github-action@v6
-        env:
-          ROOT_URL: "https://sparc.science"
         with:
           wait-on: ${{ env.ROOT_URL }}
           record: true
