--- a/.github/workflows/scheduled_staging_cypress.yml
+++ b/.github/workflows/scheduled_staging_cypress.yml
@@ -51,6 +51,7 @@ env:
 
 jobs:
   scheduled-cypress-run-staging:
+    if: github.event_name == 'schedule'
     runs-on: ubuntu-latest
 
     strategy:
