--- a/.github/workflows/pull_request_cypress.yml
+++ b/.github/workflows/pull_request_cypress.yml
@@ -61,6 +61,13 @@ jobs:
         containers: [1, 2, 3, 4]
 
     steps:
+      - name: Cleanup pre-installed tools
+        run: |
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /opt/ghc
+          sudo rm -rf "/usr/local/share/boost"
+          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+
       - uses: actions-cool/check-user-permission@main
         id: checkUser
         with:
@@ -81,6 +88,7 @@ jobs:
       - name: Automated Run Testing when Pull Request
         if: steps.checkUser.outputs.require-result == 'true'
         uses: cypress-io/github-action@v6
+        timeout-minutes: 30
         env:
           ROOT_URL: ${{ secrets.ROOT_URL }} # http://localhost:3000
         with:
