--- a/.github/workflows/quality_control_cypress.yml
+++ b/.github/workflows/quality_control_cypress.yml
@@ -111,6 +111,13 @@ jobs:
         containers: [1, 2]
 
     steps:
+      - name: Cleanup pre-installed tools
+        run: |
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /opt/ghc
+          sudo rm -rf "/usr/local/share/boost"
+          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+
       - name: Checkout
         uses: actions/checkout@v4
 
@@ -124,6 +131,7 @@ jobs:
         env:
           ROOT_URL: "https://staging.sparc.science"
         uses: cypress-io/github-action@v6
+        timeout-minutes: 30
         with:
           wait-on: ${{ env.ROOT_URL }}
           record: true
@@ -136,6 +144,7 @@ jobs:
         env:
           ROOT_URL: "https://sparc.science"
         uses: cypress-io/github-action@v6
+        timeout-minutes: 30
         with:
           wait-on: ${{ env.ROOT_URL }}
           record: true
