--- a/.github/workflows/scheduled_production_cypress.yml
+++ b/.github/workflows/scheduled_production_cypress.yml
@@ -60,6 +60,13 @@ jobs:
         containers: [1, 2, 3, 4]
 
     steps:
+      - name: Cleanup pre-installed tools
+        run: |
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /opt/ghc
+          sudo rm -rf "/usr/local/share/boost"
+          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+
       - name: Checkout
         uses: actions/checkout@v4
 
@@ -70,6 +77,7 @@ jobs:
 
       - name: Schedule Run Testing against Production
         uses: cypress-io/github-action@v6
+        timeout-minutes: 30
         env:
           ROOT_URL: "https://sparc.science"
         with:
