Run scheduled production testing on latest release

--- a/.github/workflows/scheduled_production_cypress.yml
+++ b/.github/workflows/scheduled_production_cypress.yml
@@ -50,6 +50,20 @@ env:
   SPARC_PORTAL_USER_SECRET: ${{ secrets.SPARC_PORTAL_USER_SECRET }}
 
 jobs:
+  output-latest-release:
+    runs-on: ubuntu-latest
+
+    outputs:
+      release-tag: ${{ steps.releasetag.outputs.tag }}
+
+    steps:
+      - uses: actions/checkout@v4
+      - run: git fetch --tags origin
+
+      - name: Checkout Latest Release Tag
+        id: releasetag
+        uses: "WyriHaximus/github-action-get-previous-tag@v1"
+
   scheduled-cypress-run-production:
     if: github.event_name == 'schedule'
     runs-on: ubuntu-latest
@@ -64,6 +78,8 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          ref: ${{ needs.output-latest-release.outputs.release-tag }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
