--- a/.github/workflows/scheduled_staging_cypress.yml
+++ b/.github/workflows/scheduled_staging_cypress.yml
@@ -52,8 +52,38 @@ env:
   SPARC_PORTAL_USER_SECRET: ${{ secrets.SPARC_PORTAL_USER_SECRET }}
 
 jobs:
+  latest-deployment:
+    runs-on: ubuntu-latest
+
+    outputs:
+      latest-sha: ${{ steps.latest-deployment-sha.outputs.sha }}
+
+    permissions:
+      deployments: read
+      contents: read
+    steps:
+      - name: Checkout
+        id: checkout
+        uses: actions/checkout@v4
+
+      - name: Get sha of latest deployment in main branch
+        id: latest-deployment-sha
+        uses: vrnithinkumar/latest-deployment-sha@v1.0.0
+        with:
+          repo_owner: nih-sparc
+          repo_name: sparc-app-2
+          environment: sparc-app-2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Print latest deployment sha
+        id: output
+        run: echo "${{ steps.latest-deployment-sha.outputs.sha }}"
+
   scheduled-cypress-run-staging:
     runs-on: ubuntu-latest
+
+    needs: latest-deployment
 
     steps:
       - name: Cleanup pre-installed tools
@@ -65,6 +95,8 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          ref: ${{ needs.latest-deployment.outputs.latest-sha }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
