--- a/.github/workflows/quality_control_cypress.yml
+++ b/.github/workflows/quality_control_cypress.yml
@@ -98,11 +98,8 @@ jobs:
     runs-on: ubuntu-latest
 
     outputs:
-      latest-sha: ${{ steps.latest-deployment-sha.outputs.sha }}
+      latest-sha: ${{ steps.latest-deployment-sha.outputs.deployment-sha }}
 
-    permissions:
-      deployments: read
-      contents: read
     steps:
       - name: Checkout
         id: checkout
@@ -110,17 +107,13 @@ jobs:
 
       - name: Get sha of latest deployment in main branch
         id: latest-deployment-sha
-        uses: vrnithinkumar/latest-deployment-sha@v1.0.0
+        uses: go-fjords/get-active-deployment-action@v0.0.3
         with:
-          repo_owner: nih-sparc
-          repo_name: sparc-app-2
           environment: sparc-app-prod
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Print latest deployment sha
         id: output
-        run: echo "${{ steps.latest-deployment-sha.outputs.sha }}"
+        run: echo "${{ steps.latest-deployment-sha.outputs.deployment-sha }}"
 
   quality-control-cypress-run:
     runs-on: ubuntu-latest
