--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "start": "node .output/server/index.mjs",
     "postinstall": "nuxt prepare",
     "sitemap": "node generate_sitemap.js",
-    "test-cypress": "cypress run",
-    "test-cypress-record": "cypress run --record"
+    "cypress": "cypress run",
+    "cypress-ui": "cypress open",
+    "cypress-record": "cypress run --record --key <record key> --tag local",
+    "cypress-record-parallel": "cypress run --record --key <record key> --tag local --parallel --ci-build-id <build id>"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxtjs/turnstile": "^0.6.3",
     "@zadigetvoltaire/nuxt-gtm": "^0.0.13",
-    "cypress": "13.9.0",
+    "cypress": "13.15.0",
     "nuxt": "^3.8.2",
     "nuxt-simple-robots": "^4.0.0-rc.19",
     "nuxt-svgo": "^3.5.6",
