--- a/.github/workflows/quality_control_cypress.yml
+++ b/.github/workflows/quality_control_cypress.yml
@@ -16,7 +16,7 @@ on:
         description: "Define keywords for searching"
         required: true
         default: "Spine, Neck"
-      FILTER_FACET:
+      FILTER_FACETS:
         description: "Define facet for filtering"
         required: true
         default: "Human"
@@ -51,7 +51,7 @@ on:
 env:
   PAGE_LIMIT: ${{ github.event.inputs.PAGE_LIMIT }}
   SEARCH_KEYWORDS: ${{ github.event.inputs.SEARCH_KEYWORDS }}
-  FILTER_FACET: ${{ github.event.inputs.FILTER_FACET }}
+  FILTER_FACETS: ${{ github.event.inputs.FILTER_FACETS }}
   MULTIPLE_FILTER_FACETS: ${{ github.event.inputs.MULTIPLE_FILTER_FACETS }}
   DATASET_IDS: ${{ github.event.inputs.DATASET_IDS }}
   TAXON_MODELS: ${{ github.event.inputs.TAXON_MODELS }}
