--- a/.github/workflows/pull_request_cypress.yml
+++ b/.github/workflows/pull_request_cypress.yml
@@ -59,10 +59,13 @@ jobs:
       - name: Print uuid
         run: echo "${{ steps.uuid.outputs.value }}"
 
-  pull-request-cypress-run:
+  cypress-run:
     runs-on: ubuntu-latest
 
     needs: build-uuid
+
+    outputs:
+      step-outcome: ${{ steps.cypress.outcome }}
 
     strategy:
       fail-fast: false
@@ -77,42 +80,104 @@ jobs:
           sudo rm -rf "/usr/local/share/boost"
           sudo rm -rf "$AGENT_TOOLSDIRECTORY"
 
-      - name: Check user permission
-        uses: actions-cool/check-user-permission@v2
-        id: checkUser
-        with:
-          require: "write"
-          username: ${{ github.event.pull_request.user.login }}
+      - name: Mock cypress outcome
+        id: cypress
+        run: |
+          echo "this is mock cypress outcome"
+          # exit 1
 
-      - name: Checkout
-        if: steps.checkUser.outputs.require-result == 'true'
-        uses: actions/checkout@v4
-        with:
-          ref: ${{ github.event.pull_request.head.sha }}
+      # - name: Check user permission
+      #   uses: actions-cool/check-user-permission@v2
+      #   id: checkUser
+      #   with:
+      #     require: "write"
+      #     username: ${{ github.event.pull_request.user.login }}
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18.17.1
+      # - name: Checkout
+      #   if: steps.checkUser.outputs.require-result == 'true'
+      #   uses: actions/checkout@v4
+      #   with:
+      #     ref: ${{ github.event.pull_request.head.sha }}
 
-      - name: Automated Run Testing when Pull Request
-        if: steps.checkUser.outputs.require-result == 'true'
-        uses: cypress-io/github-action@v6
-        timeout-minutes: 30
-        env:
-          ROOT_URL: ${{ secrets.ROOT_URL }} # http://localhost:3000
-        with:
-          build: yarn build
-          start: yarn preview
-          wait-on: ${{ secrets.ROOT_URL }}
-          record: true
-          parallel: true
-          tag: PR
-          ci-build-id: "${{ needs.build-uuid.outputs.uuid }}-${{ github.workflow }}-${{ github.event_name }}"
+      # - name: Setup Node.js
+      #   uses: actions/setup-node@v4
+      #   with:
+      #     node-version: 18.17.1
 
-      - name: Skip tests
-        if: steps.checkUser.outputs.require-result == 'false'
-        uses: actions/github-script@v4
+      # - name: Automated Run Testing when Pull Request
+      #   if: steps.checkUser.outputs.require-result == 'true'
+      #   id: cypress
+      #   uses: cypress-io/github-action@v6
+      #   timeout-minutes: 30
+      #   env:
+      #     ROOT_URL: ${{ secrets.ROOT_URL }} # http://localhost:3000
+      #   with:
+      #     build: yarn build
+      #     start: yarn preview
+      #     wait-on: ${{ secrets.ROOT_URL }}
+      #     record: true
+      #     parallel: true
+      #     tag: PR
+      #     ci-build-id: "${{ needs.build-uuid.outputs.uuid }}-${{ github.workflow }}-${{ github.event_name }}"
+
+  status-change:
+    if: always()
+    runs-on: ubuntu-latest
+
+    needs: cypress-run
+
+    outputs:
+      status: ${{ env.TESTING }}
+
+    steps:
+      - name: Cypress result
+        run: echo "C_STEP=${{ needs.cypress-run.outputs.step-outcome }}" >> $GITHUB_ENV
+
+      - name: Get previous workflow status
+        uses: Mercymeilya/last-workflow-status@v0.3.3
+        id: workflow
         with:
-          script: |
-            core.setFailed('Pull request is opened by an user without write permission, tests are skipped for security reason')
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Get conclusion of last workflow
+        uses: pinguet62/workflow-conclusion@v1.0.0
+        id: workflow2
+        with:
+          workflow_id: "pull_request_cypress.yml"
+          branch: "main"
+          skip: 1
+      - run: echo "${{steps.workflow2.outputs.workflow_conclusion}}"
+
+      - name: Workflow result
+        run: echo "P_WORKFLOW=${{ steps.workflow.outputs.last_status }}" >> $GITHUB_ENV
+
+      - name: Checking condition
+        run: |
+          if [[ $C_STEP == 'success' && $P_WORKFLOW == 'success' ]]; then
+            echo "TESTING=keepsuccess" >> $GITHUB_ENV
+          elif [[ $C_STEP == 'success' && $P_WORKFLOW == 'failure' ]]; then
+            echo "TESTING=backtonormal" >> $GITHUB_ENV
+          elif [[ $C_STEP == 'failure' && $P_WORKFLOW == 'success' ]]; then
+            echo "TESTING=failure" >> $GITHUB_ENV
+          elif [[ $C_STEP == 'failure' && $P_WORKFLOW == 'failure' ]]; then
+            echo "TESTING=stillfail" >> $GITHUB_ENV
+          else
+            echo "TESTING=unexpected" >> $GITHUB_ENV
+            echo "Unexpected condition. Investigation is required."
+          fi
+
+      - name: Status result
+        run: echo "result=$TESTING"
+
+  slack-notification:
+    if: always()
+    runs-on: ubuntu-latest
+
+    needs: status-change
+
+    steps:
+      - name: Send notification to Slack
+        if: ${{ needs.status-change.outputs.status == 'backtonormal' || needs.status-change.outputs.status == 'failure' || needs.status-change.outputs.status == 'stillfail' }}
+        run: |
+          echo "Testing status=${{ needs.status-change.outputs.status }}"
+          echo "Sending notification to Slack..."
