--- a/.github/workflows/quality_control_cypress.yml
+++ b/.github/workflows/quality_control_cypress.yml
@@ -132,7 +132,7 @@ jobs:
         uses: pinguet62/workflow-conclusion@v1.0.0
         id: workflow
         with:
-          workflow_id: "pull_request_cypress.yml"
+          workflow_id: "quality_control_cypress.yml"
           branch: "main"
           skip: 1
 
