--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
   },
   "resolutions": {
     "string-width": "4.2.3",
-    "mlly": "1.4.0"
+    "mlly": "1.4.0",
+    "vue": "3.4.21"
   },
   "engines": {
     "node": "18.17.1"
