--- a/.github/workflows/scheduled_staging_cypress.yml
+++ b/.github/workflows/scheduled_staging_cypress.yml
@@ -108,7 +108,8 @@ jobs:
     needs: cypress-run
 
     outputs:
-      status: ${{ env.TESTING }}
+      status: ${{ env.TESTING_STATUS }}
+      message: ${{ env.TESTING_MESSAGE }}
 
     steps:
       - name: Cypress result
@@ -128,20 +129,23 @@ jobs:
       - name: Checking condition
         run: |
           if [[ $C_STEP == 'success' && $P_WORKFLOW == 'success' ]]; then
-            echo "TESTING=keepsuccess" >> $GITHUB_ENV
+            echo "TESTING_STATUS=staysuccess" >> $GITHUB_ENV
           elif [[ $C_STEP == 'success' && $P_WORKFLOW == 'failure' ]]; then
-            echo "TESTING=backtonormal" >> $GITHUB_ENV
+            echo "TESTING_STATUS=backtonormal" >> $GITHUB_ENV
+            echo "TESTING_MESSAGE=Testing back to normal" >> $GITHUB_ENV
           elif [[ $C_STEP == 'failure' && $P_WORKFLOW == 'success' ]]; then
-            echo "TESTING=failure" >> $GITHUB_ENV
+            echo "TESTING_STATUS=failure" >> $GITHUB_ENV
+            echo "TESTING_MESSAGE=Testing failed" >> $GITHUB_ENV
           elif [[ $C_STEP == 'failure' && $P_WORKFLOW == 'failure' ]]; then
-            echo "TESTING=stillfail" >> $GITHUB_ENV
+            echo "TESTING_STATUS=stillfail" >> $GITHUB_ENV
+            echo "TESTING_MESSAGE=Testing still failed" >> $GITHUB_ENV
           else
-            echo "TESTING=unexpected" >> $GITHUB_ENV
+            echo "TESTING_STATUS=unexpected" >> $GITHUB_ENV
             echo "Unexpected condition. Investigation is required."
           fi
 
       - name: Status result
-        run: echo "result=$TESTING"
+        run: echo "result=$TESTING_STATUS"
 
   slack-notification:
     if: always()
@@ -154,4 +158,5 @@ jobs:
         if: ${{ needs.status-change.outputs.status == 'backtonormal' || needs.status-change.outputs.status == 'failure' || needs.status-change.outputs.status == 'stillfail' }}
         run: |
           echo "Testing status=${{ needs.status-change.outputs.status }}"
+          echo "Testing message=${{ needs.status-change.outputs.message }}"
           echo "Sending notification to Slack..."
