--- a/.github/workflows/scheduled_production_cypress.yml
+++ b/.github/workflows/scheduled_production_cypress.yml
@@ -145,7 +145,9 @@ jobs:
           fi
 
       - name: Status result
-        run: echo "result=$TESTING_STATUS"
+        run: |
+          echo "status=$TESTING_STATUS"
+          echo "message=$TESTING_MESSAGE"
 
   slack-notification:
     if: always()
