Revert "Set vue to 3.4.21 with yarn resolutions option."
This reverts commit 3ae9a962df63a3569fe6389bbf3a40cda5828230.

--- a/package.json
+++ b/package.json
@@ -54,8 +54,7 @@
   },
   "resolutions": {
     "string-width": "4.2.3",
-    "mlly": "1.4.0",
-    "vue": "3.4.21"
+    "mlly": "1.4.0"
   },
   "engines": {
     "node": "18.17.1"
