--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@abi-software/mapintegratedvuer": "1.5.1",
     "@abi-software/plotvuer": "1.0.3",
     "@abi-software/simulationvuer": "1.0.1",
-    "@element-plus/nuxt": "^1.0.6",
+    "@element-plus/nuxt": "^1.0.10",
     "@nuxtjs/sitemap": "^5.1.4",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "@pinia/nuxt": "^0.5.1",
@@ -54,7 +54,8 @@
   },
   "resolutions": {
     "string-width": "4.2.3",
-    "mlly": "1.4.0"
+    "mlly": "1.4.0",
+    "vue": "3.4.21"
   },
   "engines": {
     "node": "18.17.1"
