--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "plyr": "^3.7.8",
     "postscribe": "^2.0.8",
     "ramda": "^0.29.0",
+    "reva-widget": "^1.0.3",
     "sparc-dashboard-beta": "^0.2.8",
     "sparc-design-system-components-2": "1.0.1",
     "striptags": "^3.2.0",
