Set to run at 00:00 UTC time every Monday

--- a/.github/workflows/gsheet_qc_trigger.yml
+++ b/.github/workflows/gsheet_qc_trigger.yml
@@ -2,7 +2,7 @@ name: Google Sheets Quality Control Trigger
 
 on:
   schedule:
-    - cron: "0 19 * * *"
+    - cron: "0 0 * * 1"
 
   workflow_dispatch:
 
