--- a/.github/workflows/gsheet_qc_trigger.yml
+++ b/.github/workflows/gsheet_qc_trigger.yml
@@ -2,7 +2,7 @@ name: Google Sheets Quality Control Trigger
 
 on:
   schedule:
-    - cron: "0 0 * * 1"
+    - cron: "0 5 * * *"
 
   workflow_dispatch:
 
