--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "@zadigetvoltaire/nuxt-gtm": "^0.0.13",
     "cypress": "13.15.0",
     "nuxt": "^3.8.2",
+    "nuxt-plotly": "^1.0.14",
     "nuxt-simple-robots": "^4.0.0-rc.19",
     "nuxt-svgo": "^3.5.6",
     "sass": "^1.66.1"
   },
   "dependencies": {
     "@abi-software/mapintegratedvuer": "1.7.1",
-    "@abi-software/plotvuer": "1.0.3",
+    "@abi-software/plotcomponents": "^0.1.0",
+    "@abi-software/plotdatahelpers": "^0.1.0",
     "@abi-software/simulationvuer": "1.0.1",
     "@element-plus/nuxt": "^1.0.10",
     "@nuxtjs/sitemap": "^5.1.4",
