--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/turnstile": "^0.6.3",
     "@zadigetvoltaire/nuxt-gtm": "^0.0.13",
     "cypress": "13.15.0",
+    "cypress-visual-regression": "^5.2.2",
     "nuxt": "^3.8.2",
     "nuxt-simple-robots": "^4.0.0-rc.19",
     "nuxt-svgo": "^3.5.6",
