Remove base screenshot
Take the base screenshot during the test

--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,4 @@ public/sitemap*
 
 tests/cypress/videos
 tests/cypress/downloads
-tests/cypress/screenshots/*
-!tests/cypress/screenshots/base
+tests/cypress/screenshots
