--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "sass": "^1.66.1"
   },
   "dependencies": {
-    "@abi-software/mapintegratedvuer": "1.9.0-beta.4",
+    "@abi-software/mapintegratedvuer": "1.9.0",
     "@abi-software/plotcomponents": "^0.2.0",
     "@abi-software/plotdatahelpers": "^0.1.2",
-    "@abi-software/simulationvuer": "1.0.1",
+    "@abi-software/simulationvuer": "1.0.2",
     "@element-plus/nuxt": "^1.0.10",
     "@nuxtjs/sitemap": "^5.1.4",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
@@ -47,6 +47,7 @@
     "lodash": "^4.17.21",
     "marked": "^8.0.1",
     "mitt": "^3.0.1",
+    "plotly.js": "2.35.3",
     "plyr": "^3.7.8",
     "postscribe": "^2.0.8",
     "ramda": "^0.29.0",
