--- a/package.json
+++ b/package.json
@@ -53,8 +53,7 @@
     "plyr": "^3.7.8",
     "postscribe": "^2.0.8",
     "ramda": "^0.29.0",
-    "reva-widget": "^1.0.9",
-    "sparc-dashboard-beta": "0.5.1",
+    "sparc-dashboard-beta": "^0.2.0",
     "sparc-design-system-components-2": "1.0.1",
     "striptags": "^3.2.0",
     "uint8array-extras": "^1.0.0",
