--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "sass": "^1.66.1"
   },
   "dependencies": {
-    "@abi-software/mapintegratedvuer": "1.9.2",
+    "@abi-software/mapintegratedvuer": "1.9.3-beta.0",
     "@abi-software/plotcomponents": "^0.2.0",
     "@abi-software/plotdatahelpers": "^0.1.2",
-    "@abi-software/simulationvuer": "1.0.2",
+    "@abi-software/simulationvuer": "2.0.11-beta.0",
     "@element-plus/nuxt": "^1.0.10",
     "@nuxtjs/sitemap": "^5.1.4",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
