--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "sass": "^1.66.1"
   },
   "dependencies": {
-    "@abi-software/mapintegratedvuer": "1.11.1-beta.2",
+    "@abi-software/mapintegratedvuer": "1.11.1-beta.3",
     "@abi-software/plotcomponents": "^0.2.4",
     "@abi-software/plotdatahelpers": "^0.1.2",
     "@abi-software/simulationvuer": "2.0.13",
@@ -63,8 +63,7 @@
   "resolutions": {
     "string-width": "4.2.3",
     "mlly": "1.4.0",
-    "vue": "3.4.21",
-    "@abi-software/scaffoldvuer": "1.11.0-beta.2"
+    "vue": "3.4.21"
   },
   "engines": {
     "node": "18.17.1"
